# snake_skin_bytecode

./: .gitignore  DESIGN.md  EDITING_TODOS.md  README.md  STATUS.md  pyproject.toml
notes/: AD_AS_DUALITY.md
scripts/: coverage-multi-version.sh
src/bytecode_anf/: JOIN_POINTS.md  __init__.py  anf.py  builtin_lattices.py  builtin_transfers.py  interpreter.py  lattice.py  opcode_versions.py  stack_to_anf.py  transfer.py
tests/: __init__.py  test_bug_fixes.py  test_bytecode_anf.py  test_coverage_expansion.py  test_v3_fixes.py
writings/: AD_AS_DUALITY.md  DESIGN.md  INDEX.md  JOIN_POINTS.md
writings/corecord-unification/: CORECORD_UNIFICATION.md  corecord_unification.tex
writings/handoffs/: EDITING_TODOS.md  STATUS.md
