[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bytecode-anf"
version = "0.4.0"
description = "Recover ANF-style AST from Python bytecode with annotation flow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Carter Schonwald", email = "carter.schonwald@gmail.com" }
]
keywords = ["bytecode", "anf", "abstract-interpretation", "compiler", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy"]

[project.urls]
Homepage = "https://github.com/cartazio/bytecode-anf"

[tool.hatch.build.targets.wheel]
packages = ["src/bytecode_anf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
